# SDD-hub

./: .gitignore  CLAUDE.md  audit-findings.md  knowledge-base-rules.md  onboarding.md  plan.md  setup-copilot.sh  setup.sh  todo.md  workflow-audit-findings.md
agents/: INTEGRATION_PLAN.md  README.md  claude-md-compliance-checker.md  code-quality-pragmatist.md  karen.md  ui-ux-reviewer.md  ultrathink-debugger.md
commands/: bootstrap.md  continue-task.md  explore.md  implement.md  learn-from-reports.md  pr-review.md  promote-rules.md  propose.md  quick-ship.md  research.md  review-findings.md  ship.md  spec-status.md  validate-spec.md  validate.md  workflow-summary.md
copilot/: copilot-instructions.md
docs/: workflow-diagram.md
hooks/: block-dismissive-language.sh  block-git-hook-bypass.sh  monitor-tool-calls.sh
knowledge-base/: _index.md  gates.yml
scripts/: config-loader.sh  config-paths.sh  monitor.sh  pre-commit-hook.sh  task-manager.sh
templates/: CLAUDE.md  gitignore-additions.txt  settings.json  spec-config.yml.template  workflow.yml.template
tests/: test-config-loader.sh  test-config-paths.sh  test-implement-context.sh  test-monitor-hook.sh  (+2 more)
workflow-tui/: Cargo.toml
workflow-tui/src/: app.rs  event.rs  main.rs  watcher.rs
workflow-tui/src/model/: mod.rs  monitor_event.rs  report.rs  spec.rs  task.rs
workflow-tui/src/parse/: frontmatter.rs  mod.rs  monitor_parser.rs  report_parser.rs  scanner.rs  task_parser.rs  warning.rs
workflow-tui/src/ui/: dep_graph.rs  layout.rs  mod.rs  monitor.rs  progress.rs  reports.rs  spec_list.rs  styles.rs
(+89 files in other folders)
