[package]
name = "workflow-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
notify = "8.0.0"
notify-debouncer-mini = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
